.provarCaches/00D5f000005vwGkEAI/objects/rstkf__apinvtxn__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_apinvtxn</customHelpPage>
    <description>apinvtxn__c</description>
    <fields>
        <fullName>rstkf__Age_Due__c</fullName>
        <description>Age of the invoice based on the invoice due date. Formula is Invoice Due Date - TODAY</description>
        <formula>rstkf__apinvtxn_agedate__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age of the invoice based on the invoice due date. Formula is Invoice Due Date - TODAY</inlineHelpText>
        <label>Age - Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__Age_Transaction__c</fullName>
        <description>Age of the invoice based on the transaction date. Formula is Invoice Transaction Date - TODAY</description>
        <formula>rstkf__apinvtxn_trandate__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age of the invoice based on the transaction date. Formula is Invoice Transaction Date - TODAY</inlineHelpText>
        <label>Age - Transaction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__Open_Amnt_Home__c</fullName>
        <formula>rstkf__apinvtxn_dispopenamt__c  * rstkf__apinvtxn_exchangerate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Based on the Payable Transaction record, Open Amount in transaction currency multiplied by the Home to Vendor exchange rate</inlineHelpText>
        <label>Open Amnt - Home</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Internal use only</description>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_agedate__c</fullName>
        <inlineHelpText>The due date based on the &quot;net&quot; days due defined by the Payment Terms selected.  Note that if the Transaction Date is changed on the add of this record to be prior to TODAY, this date needs to be adjusted manually if needed.</inlineHelpText>
        <label>Net Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_agedays__c</fullName>
        <inlineHelpText>The number of &quot;aging&quot; days, based on the time of the PO Receipt</inlineHelpText>
        <label>Age Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_amtapplmaint__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The amount of Vendor Credit applied to the given Vendor Invoice, stated in Transaction Currency</inlineHelpText>
        <label>Amount Applied (Txn Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_apacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This is the Accounts Payable Account used in processing the transaction in the Financial Company. It is defined on the Vendor Company record for the selected Vendor.</description>
        <inlineHelpText>The Accounts Payable Account used when processing this transaction in the given Financial Company, as defined on the Vendor Company record for this Vendor</inlineHelpText>
        <label>Accounts Payable Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Payable Transactions</relationshipLabel>
        <relationshipName>apinvtxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_apinvh__c</fullName>
        <label>Payable Session Header</label>
        <referenceTo>rstkf__apinvh__c</referenceTo>
        <relationshipLabel>Payable Transactions</relationshipLabel>
        <relationshipName>apinvtxns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_apwht__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Withholding Tax Class</label>
        <referenceTo>rstkf__apwht__c</referenceTo>
        <relationshipLabel>Payable Transactions</relationshipLabel>
        <relationshipName>apinvtxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_cctype__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Credit Card Type</label>
        <referenceTo>rstkf__glapcc__c</referenceTo>
        <relationshipLabel>Payable Transactions</relationshipLabel>
        <relationshipName>apinvtxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_cmdisctknind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor Credit Terms Disc Taken</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_cmpno__c</fullName>
        <formula>rstkf__apinvtxn_apinvh__r.rstkf__apinvh_cmpno__r.rstkf__glcmp_cmpno__r.rstk__sycmp_cmpno__c</formula>
        <label>Company Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_comments__c</fullName>
        <inlineHelpText>User-defined comments applicable to this transaction, up to 100 characters in length</inlineHelpText>
        <label>Transaction Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_creditcardind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Card Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_dfltdiv__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>When a PO Line is referenced, this is the Inv Div for the PO Line. When entering a Payable Transaction it is set to either the default Div associated with the user or, if no Div is associated with a user, the user will select a Division from the dropdown.</inlineHelpText>
        <label>Default Division</label>
        <referenceTo>rstkf__gldiv__c</referenceTo>
        <relationshipLabel>Payable Transactions</relationshipLabel>
        <relationshipName>apinvtxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_dfltproj__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>When a PO Line is referenced, this is set to the Project for that PO Line. When entering a manual Payable Transaction, select Project from dropdown, which displays Projects associated with Division selected (you must select a Division to set this field).</inlineHelpText>
        <label>Default Project</label>
        <referenceTo>rstkf__glproj__c</referenceTo>
        <relationshipLabel>Payable Transactions</relationshipLabel>
        <relationshipName>apinvtxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_dfltwbs__c</fullName>
        <label>Default Job Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_dimvals__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Dimension Values</label>
        <referenceTo>rstk__dimvals__c</referenceTo>
        <relationshipLabel>Payable Transactions</relationshipLabel>
        <relationshipName>apinvtxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_discblamt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discountable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_discountdueaged__c</fullName>
        <formula>Today() - rstkf__apinvtxn_termsdiscdate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Due Aged</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_disctermamt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Shown if the Vendor Payment terms include a discount; this is the discount amount if the transaction is paid on or before the discount date.</inlineHelpText>
        <label>Discount  Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_dispopenamt__c</fullName>
        <formula>IF( ISPICKVAL(rstkf__apinvtxn_trantype__c, &apos;Invoice&apos;) || ISPICKVAL(rstkf__apinvtxn_trantype__c, &apos;Vendor Debit&apos;), rstkf__apinvtxn_unapplamtmaint__c, rstkf__apinvtxn_unapplamtmaint__c* -1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_disptxnamt__c</fullName>
        <formula>IF( ISPICKVAL(rstkf__apinvtxn_trantype__c, &apos;Invoice&apos;) || ISPICKVAL(rstkf__apinvtxn_trantype__c, &apos;Vendor Debit&apos;), rstkf__apinvtxn_maintamt__c, rstkf__apinvtxn_maintamt__c * -1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Txn Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_docno__c</fullName>
        <inlineHelpText>User-defined document number, normally set to the document received from the given Vendor, up to 50 characters in length. This is required when the Transaction Type = Vendor Invoice, and optional (but recommended), for Vendor Credits and Vendor Debits.</inlineHelpText>
        <label>Document Number (e.g., Invoice Number)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_docnoseq__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The purpose of this field is to retain the same Document Number so that one can communicate with the vendor concerning their invoice number,  but to allow a sequence of Payable Transaction records that may span over time.</inlineHelpText>
        <label>Document Number Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_dowht__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WHT Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_drapinvtxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Card Invoice/Vendor Debit</label>
        <referenceTo>rstkf__apinvtxn__c</referenceTo>
        <relationshipLabel>Payable Transactions</relationshipLabel>
        <relationshipName>drapinvtxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_dsctknamtapplmaint__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The amount of discounts taken against Payment Terms, stated in Payment Currency</inlineHelpText>
        <label>Terms Disc Amt Taken Appl (Paymnt  Curr)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_eftsubtype__c</fullName>
        <label>EFT Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wire Transfer</fullName>
                </value>
                <value>
                    <fullName>International Transfer</fullName>
                </value>
                <value>
                    <fullName>ACH Transfer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_exchangerate__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>The exchange rate between the Home Currency and Vendor Currency at the time this record was created</inlineHelpText>
        <label>Home-to-Vendor Exchange Rate</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_forexschedtype__c</fullName>
        <description>Obsoleted, per Sam -

Since we have APATO/APINVTXN_SYFOREXSCHEDNO, the APATO/APINVTXN_FOREXSCHEDTYPE fields are moot and should be changed to ‘Z_OBSOLETE’.  (We can get the schedule type thru the lookup field)</description>
        <inlineHelpText>The Schedule Type used when deriving the exchange rate.  Options are


1 = Current Spot Rate
2 = Month End Spot Rate
3 = Locked-In Commitment Rate
4 = Budget Rate</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_frghthomeamt__c</fullName>
        <inlineHelpText>Total Freight Amount, stated in Home Currency</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <summarizedField>rstkf__apinvline__c.rstkf__apinvline_frghthomeamt__c</summarizedField>
        <summaryForeignKey>rstkf__apinvline__c.rstkf__apinvline_apinvtxn__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_frghthomeamtnet__c</fullName>
        <description>apinvtxn_frghthomeamtnet__c</description>
        <inlineHelpText>The field carries the sum of all distributions that have &apos;Freight&apos; as the Account Type Filter (home currency)</inlineHelpText>
        <label>Freight Amount – Home Currency</label>
        <summarizedField>rstkf__apinvline__c.rstkf__apinvline_frghthometamtnet__c</summarizedField>
        <summaryForeignKey>rstkf__apinvline__c.rstkf__apinvline_apinvtxn__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_frghtmaintamt__c</fullName>
        <inlineHelpText>Total Freight Amount, stated in Maintenance (aka Transaction) Currency</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <summarizedField>rstkf__apinvline__c.rstkf__apinvline_frghtmaintamt__c</summarizedField>
        <summaryForeignKey>rstkf__apinvline__c.rstkf__apinvline_apinvtxn__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_frghtmaintamtnet__c</fullName>
        <description>apinvtxn_frghtmaintamtnet__c</description>
        <inlineHelpText>The field carries the sum of all distributions that have &apos;Freight&apos; as the Account Type Filter (transaction currency)</inlineHelpText>
        <label>Freight Amount – Maintenance Currency</label>
        <summarizedField>rstkf__apinvline__c.rstkf__apinvline_frghtmaintamtnet__c</summarizedField>
        <summaryForeignKey>rstkf__apinvline__c.rstkf__apinvline_apinvtxn__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_glbankacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Pay with Bank Card Account</description>
        <inlineHelpText>This is a lookup to the Bank Card that will be used to pay / settle this Payable Transaction.</inlineHelpText>
        <label>Pay with Bank Card Account</label>
        <referenceTo>rstkf__glbankacct__c</referenceTo>
        <relationshipLabel>Payable Transactions (Pay with Bank Card Account)</relationshipLabel>
        <relationshipName>Payable_Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_glfa__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Fixed Asset</description>
        <label>Related Fixed Asset</label>
        <referenceTo>rstkf__glfa__c</referenceTo>
        <relationshipLabel>Payable Transactions</relationshipLabel>
        <relationshipName>apinvtxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_glproctxn__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Transaction Group</label>
        <referenceTo>rstkf__glproctxn__c</referenceTo>
        <relationshipLabel>Payable Transactions</relationshipLabel>
        <relationshipName>apinvtxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_holdcode__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>When Invoice Hold is checked, this field appears.  Select appropriate Reason Code from dropdown. If additional Reason Codes are needed, go to Financial System Setup &gt; Reason Codes to add additional codes.</inlineHelpText>
        <label>Hold Process Code</label>
        <referenceTo>rstkf__glrsn__c</referenceTo>
        <relationshipLabel>Payable Transactions</relationshipLabel>
        <relationshipName>apinvtxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_holdprocind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the given session/transaction is still open, it may be placed on Hold be checking this checkbox, preventing further processing</inlineHelpText>
        <label>Invoice Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_homeamt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The total amount of this transaction, in the Home currency as defined on the Company Master</inlineHelpText>
        <label>Transaction Total (Home Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_homecurr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Home Currency defined on the given Company Master</inlineHelpText>
        <label>Home Currency</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipLabel>Payable Transactions (Home Currency)</relationshipLabel>
        <relationshipName>apinvtxns_home</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_maintamt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The total amount of this transaction in the &quot;transaction&quot; currency, which may be the Vendor Currency if the given Vendor uses a different currency than the Company&apos;s Home Currency, and the Vendor is flagged to use its currency as the Maintenance Currency</inlineHelpText>
        <label>Transaction Total (Txn Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_maintcurr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The currency that the specific transaction being captured is in. It is based on the Vendor Currency or Home Currency (depending on whether the Vendor Currency is to be used [as set in the Vendor Master]).</description>
        <inlineHelpText>The currency that the specific transaction being captured is in. It is based on the Vendor Currency or Home Currency (depending on whether the Vendor Currency is to be used [as set in the Vendor Master]).</inlineHelpText>
        <label>Transaction Currency</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipLabel>Payable Transactions (Maintenance Currency)</relationshipLabel>
        <relationshipName>apinvtxns_maint</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_paycurr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The currency in which this transaction will be paid, which may differ from the Transaction Currency</inlineHelpText>
        <label>Payment Currency</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipLabel>Payable Transactions (Payment Currency)</relationshipLabel>
        <relationshipName>apinvtxns_pay</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_payingglbankacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Payment to Bank Card Account</description>
        <inlineHelpText>This is a lookup to the Bank Card into which the settlement payment will be recorded / processed.</inlineHelpText>
        <label>Payment to Bank Card Account</label>
        <referenceTo>rstkf__glbankacct__c</referenceTo>
        <relationshipLabel>Payable Transactions</relationshipLabel>
        <relationshipName>Payable_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_paymentoffset__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Payment Offset Vendor Credit</description>
        <inlineHelpText>Indicates that this Payable Transaction was created as part of a Vendor-Customer Payment Offset</inlineHelpText>
        <label>Payment Offset Vendor Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_paytype__c</fullName>
        <inlineHelpText>The means by which the transaction is paid. Users can select one of 4 types (Check, EFT, Credit Card, Bank Card). If the Vendor is not established to take all forms of payment, the choices are adjusted accordingly.</inlineHelpText>
        <label>Pay Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>EFT</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Bank Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_poline__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>If transaction is related to a receipt of a PO Line, the specific PO Line is to be referenced here</inlineHelpText>
        <label>First Purchase Order Line</label>
        <referenceTo>rstk__poline__c</referenceTo>
        <relationshipLabel>Payable Transactions</relationshipLabel>
        <relationshipName>apinvtxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_poord__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>If transaction is related to a receipt of a PO Line, the Purchase Order is to be referenced here</inlineHelpText>
        <label>First Purchase Order</label>
        <referenceTo>rstk__pohdr__c</referenceTo>
        <relationshipLabel>Payable Transactions</relationshipLabel>
        <relationshipName>apinvtxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_porcptno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>If transaction is related to a receipt of a PO Line, the specific PO Receipt is to be referenced here</inlineHelpText>
        <label>First Purchase Order Receipt</label>
        <referenceTo>rstk__porcptap__c</referenceTo>
        <relationshipLabel>Payable Transactions</relationshipLabel>
        <relationshipName>apinvtxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_povendcmpno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Vendor Company</label>
        <referenceTo>rstkf__povendcmpno__c</referenceTo>
        <relationshipLabel>Payable Transactions</relationshipLabel>
        <relationshipName>apinvtxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_prepayind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that this is a prepayment against a future Vendor Invoice</inlineHelpText>
        <label>Prepayment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_prepaytranid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prepayment TranId</label>
        <referenceTo>rstkf__apinvtxn__c</referenceTo>
        <relationshipLabel>Payable Transactions (Prepayment TranId)</relationshipLabel>
        <relationshipName>ppapinvtxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_quickpaymentind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that the Vendor Invoice will be paid via Quickpayment process</inlineHelpText>
        <label>Quickpayment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_rcptvatamt__c</fullName>
        <label>VAT Amount from PO Receipt Txns</label>
        <summarizedField>rstkf__apinvline__c.rstkf__apinvline_rcptvatamt__c</summarizedField>
        <summaryForeignKey>rstkf__apinvline__c.rstkf__apinvline_apinvtxn__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_rcrrngind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurring Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_remitdesc__c</fullName>
        <description>This a user-defined field up to 100 characters in length. This would typically contain payment information to enable the Vendor’s Accounting team to match the payment to Invoices.</description>
        <inlineHelpText>This a user-defined field up to 100 characters in length. This would typically contain payment information to enable the Vendor’s Accounting team to match the payment to Invoices.</inlineHelpText>
        <label>Remittance Advice Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_schedassgndate__c</fullName>
        <label>Exchange Rate Schedule  Assign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_status__c</fullName>
        <formula>TEXT(rstkf__apinvtxn_apinvh__r.rstkf__apinvh_status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_syforexschedno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Foreign Exchange Schedule Number</label>
        <referenceTo>rstkf__syforexschedno__c</referenceTo>
        <relationshipLabel>Payable Transactions</relationshipLabel>
        <relationshipName>apinvtxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_taxhomeamt__c</fullName>
        <inlineHelpText>Total Tax Amount, stated in Home Currency</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <summarizedField>rstkf__apinvline__c.rstkf__apinvline_taxhomeamt__c</summarizedField>
        <summaryForeignKey>rstkf__apinvline__c.rstkf__apinvline_apinvtxn__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_taxhomeamtnet__c</fullName>
        <description>apinvtxn_taxhomeamtnet__c</description>
        <inlineHelpText>The field carries the sum of all distributions that have &apos;Tax&apos; as the Account Type Filter (home currency)</inlineHelpText>
        <label>Tax Amount – Home Currency</label>
        <summarizedField>rstkf__apinvline__c.rstkf__apinvline_taxhometamtnet__c</summarizedField>
        <summaryForeignKey>rstkf__apinvline__c.rstkf__apinvline_apinvtxn__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_taxmaintamt__c</fullName>
        <inlineHelpText>Total Tax Amount, stated in Maintenance (aka Transaction) Currency</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <summarizedField>rstkf__apinvline__c.rstkf__apinvline_taxmaintamt__c</summarizedField>
        <summaryForeignKey>rstkf__apinvline__c.rstkf__apinvline_apinvtxn__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_taxmaintamtnet__c</fullName>
        <description>apinvtxn_taxmaintamtnet__c</description>
        <inlineHelpText>The field carries the sum of all distributions that have &apos;Tax&apos; as the Account Type Filter (transaction currency)</inlineHelpText>
        <label>Tax Amount – Maintenance Currency</label>
        <summarizedField>rstkf__apinvline__c.rstkf__apinvline_taxmaintamtnet__c</summarizedField>
        <summaryForeignKey>rstkf__apinvline__c.rstkf__apinvline_apinvtxn__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_terms__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Payment Terms defined for the given Vendor, which can be overridden if this session/transaction is still open</inlineHelpText>
        <label>Payment Terms</label>
        <referenceTo>rstk__syterms__c</referenceTo>
        <relationshipLabel>Payable Transactions</relationshipLabel>
        <relationshipName>apinvtxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_termsbasedate__c</fullName>
        <label>Terms Base Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_termsdiscdate__c</fullName>
        <inlineHelpText>Shown if the Vendor Payment terms include a discount if the amount is paid within discount terms. Discount will be applied if the amount due is paid on or before this date.</inlineHelpText>
        <label>Discount  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_totcreditshome__c</fullName>
        <inlineHelpText>Total amount of all Credits in this transaction, stated in Home Currency</inlineHelpText>
        <label>Total Credits (Home Currency)</label>
        <summarizedField>rstkf__apinvline__c.rstkf__apinvline_totcreditshome__c</summarizedField>
        <summaryForeignKey>rstkf__apinvline__c.rstkf__apinvline_apinvtxn__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_totdebitshome__c</fullName>
        <inlineHelpText>Total amount of all Debits in this transaction, stated in Home Currency</inlineHelpText>
        <label>Total Debits (Home Currency)</label>
        <summarizedField>rstkf__apinvline__c.rstkf__apinvline_totdebitshome__c</summarizedField>
        <summaryForeignKey>rstkf__apinvline__c.rstkf__apinvline_apinvtxn__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_trandate__c</fullName>
        <inlineHelpText>Defaults to the date that this transaction was added, but can be overridden.  This date must be within the Period defined for the given session/transaction set.</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_tranid__c</fullName>
        <inlineHelpText>System-assigned Transaction ID, a unique identifier for the given transaction</inlineHelpText>
        <label>Transaction ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_trantype__c</fullName>
        <inlineHelpText>The type of this transaction.  Options are 

Vendor Invoice
Vendor Credit
Vendor Debit</inlineHelpText>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                    <default>true</default>
                    <label>Invoice</label>
                </value>
                <value>
                    <fullName>Vendor Credit</fullName>
                </value>
                <value>
                    <fullName>Vendor Debit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_ttaphdr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>When the given session/transaction is a result of a PO-AP Match, this checkbox will be checked</inlineHelpText>
        <label>Payable Matched</label>
        <referenceTo>rstk__ttaphdr__c</referenceTo>
        <relationshipLabel>Payable Transactions</relationshipLabel>
        <relationshipName>apinvtxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxn_unapplamtmaint__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The balance of the given Vendor Invoice that has not had a Vendor Credit applied, stated in Transaction Currency</inlineHelpText>
        <label>Amount Unapplied (Txn Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>